--- a/style.css
+++ b/style.css
@@ -189,3 +189,13 @@ body {
 
   transition: all 0.3s;
 }
+
+@media (max-width: 415px) or (max-height: 715px) {
+  .simon {
+    transform: translate(-50%, -50%) scale(75%);
+  }
+
+  .info-text {
+    font-size: 2rem;
+  }
+}
