--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ body {
   transition: all 0.3s;
 }
 
-@media (max-width: 415px) or (max-height: 715px) {
+@media (max-width: 415px) {
   .simon {
     transform: translate(-50%, -50%) scale(75%);
   }
@@ -201,10 +201,14 @@ body {
   }
 }
 
-@media (orientation: landscape) {
+@media (orientation: landscape) and (max-height: 500px) {
   body {
     height: 100vw;
     transform: rotate(90deg);
+  }
+
+  .simon {
+    transform: translate(-50%, -50%) scale(75%);
   }
 
   .header,
